Fixed empty items error

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <!-- INVOICES LIST -->
       <section class="invoices">
         <ul class="invoices_list | flex">
-          <a href="invoice.html">
+          <a href="invoice.html" class="hide">
           <!-- <li class="invoices_list-item">
             <a href="invoice.html">
               <h2 class="invoices_list-item-id | font-heading-S-2 dark-color">
