--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
         <div class="secondary_header-right | flex">
           <button class="secondary_header-right-filter-button | flex">
-            <p class="font-heading-S-2">
+            <span class="font-heading-S-2">
               Filter <span class="hidden-for-mobile"> by status</span>
-            </p>
+            </span>
             <img src="./src/assets/icon-arrow-down.svg" alt="Filter arrow" />
           </button>
 
@@ -62,9 +62,9 @@
               src="./src/assets/icon-plus.svg"
               alt="Plus Sign"
             />
-            <p class="font-heading-S-2 light-color">
+            <span class="font-heading-S-2 light-color">
               New<span class="hidden-for-mobile"> Invoice</span>
-            </p>
+            </span>
           </button>
 
           <div class="hide secondary_header-right-filter-options">
@@ -286,13 +286,12 @@
 
         <div class="flex_for_tablet | flex_for_tablet_two-items">
           <div class="date_container">
-            <label for="date_to" class="font-body faded-color"
+            <label class="font-body faded-color"
               >Invoice Date</label
             >
 
             <span
               class="select_date font-heading-S-2 dark-color"
-              name="date_to"
               id="date_to"
             >
             </span>
@@ -300,13 +299,12 @@
           </div>
 
           <div class="options_container">
-            <label for="payment_to" class="font-body faded-color"
+            <label class="font-body faded-color"
               >Payment Terms</label
             >
 
             <span
               class="select_options font-heading-S-2 dark-color"
-              name="payment_to"
               id="payment_to"
             >
               Net 30 Days
@@ -388,9 +386,11 @@
             </div>
           </li> -->
 
+          <li>
           <button class="add_item-button | primary-color">
             <strong>+ Add New Item</strong>
           </button>
+          </li>
         </ul>
 
         <div class="form_footer | flex">
