--- a/invoice.html
+++ b/invoice.html
@@ -381,14 +381,12 @@
 
         <div class="flex_for_tablet | flex_for_tablet_two-items">
           <div class="date_container">
-            <label for="date_to" class="font-body faded-color "
+            <label class="font-body faded-color "
               >Invoice Date</label
             >
 
             <span
-            
               class="select_date font-heading-S-2 dark-color"
-              name="date_to"
               id="date_to"
             >
             21 Aug 2021
@@ -396,13 +394,12 @@
           </div>
 
           <div class="options_container">
-            <label for="payment_to" class="font-body faded-color"
+            <label class="font-body faded-color"
               >Payment Terms</label
             >
 
             <span
               class="select_options font-heading-S-2 dark-color"
-              name="payment_to"
               id="payment_to"
             >
             Net 30 Days
@@ -483,11 +480,11 @@
             </div>
           </li> -->
 
-          
-
+          <li>
           <button class="add_item-button | primary-color">
             <strong>+ Add New Item</strong>
           </button>
+          </li>
         </ul>
 
         <div class="form_footer | flex">
