Fixed darkMode Button aria label

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
 
       <div class="primary_header-right | flex">
-        <button class="primary_header-right-toggleDarkMode"></button>
+        <button class="primary_header-right-toggleDarkMode" aria-label="Dark Mode Button"></button>
         <div class="primary_header-right-line-divider"></div>
         <img
           class="primary_header-right-avatar"
